feat :: added rest api
