# src/main/resources/openapi/openapi.yml
@@ -52,7 +52,7 @@ components:
           type: string
 
 paths:
-# Author
+# Authors
   /authors:
     post:
       tags:
@@ -170,7 +170,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorDto"
-# Book
   /authors/{authorId}/books:
     parameters:
       - name: authorId
@@ -182,10 +181,10 @@ paths:
           format: int64
     post:
       tags:
-        - Book
-      summary: Create Book
-      description: Create Book
-      operationId: createBook
+        - Author
+      summary: Add Book
+      description: Add Book
+      operationId: addBook
       requestBody:
         description: Book data
         required: true
@@ -206,27 +205,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorDto"
-    get:
-      tags:
-        - Book
-      summary: Get author books
-      description: Get author books
-      operationId: getAuthorBooks
-      responses:
-        200:
-          description: Books found
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/BookDto"
-        default:
-          description: Unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorDto"
+
+  # Books
   /books:
     get:
       tags:
